# AI-Code-Assistant-Bot

./: .current_project  .env.example  .gitignore  .gitignore.new  .pre-commit-config.yaml  1.0  AI_CHAT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  TESTING.md  WINDOWS_SETUP.md  ai_chat.py  analyze_project.py  bot_state.json  check_webhook.py  cli.py  config.json  create_deploy.bat  create_deploy.ps1  create_deployment.py  debug_bot.py  deepseek_chat_test.py  deepseek_python_list_models.py  deepseek_python_test.py  deepseek_python_test2.py  list_all_projects.py  list_hf_router_models.py  list_projects_test.py  load_env.py  main.old.py  main.py  main.py.new  main1.py  main2.py  main_clean.py  pyproject.toml  (+46 more)
.github/workflows/: release.yml  tests.yml
.specstory/history/: 2025-07-26_15-33Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_15-39Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_15-50Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_16-03Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_16-09Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_16-32Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_16-45Z-from-background-проверка-работоспособности-проекта.md  2025-07-26_17-18Z-исправление-обращения-к-hugging-face-api.md
chats/: cursor_hugging_face_api.md
config/: __init__.py  models.py  models.yaml  settings.py
core/: utils.py
core/adapters/: gigachat.py  hf_deepseek.py  hf_openai.py  init.py  kimi.py  mock.py
core/ai/: ai.py  ai_router.py  project_ai.py
core/bot/: application.py  cli.py  cli_commands.py  command_processor.py  config.py  types.py
core/cli/: __init__.py  cli.py  command_processor.py  context.py  direct_commands.py  utils.py
core/code_generator/: python_gen.py  validator.py
core/commands/: base.py  dispatcher.py  run_code.py
core/llm/: bothub.py  client.py  gigachat.py
core/nlp/: __init__.py  command_processor.py  prompt_builder.py  response_parser.py
core/project/: analyzer.py  executor.py  llm_operations.py  manager.py
core/utils/: encoding_utils.py  formatting.py
deployment/ai_code_assistant/: README.md  main.py  requirements.txt
docs/: ARCHITECTURE.md
docs/api/: README.md
handlers/: __init__.py  callbacks.py  command_processor.py  commands.py  file_handlers.py  messages.py  nlp_processor.py  nlp_processor_new.py  project.py  project_handlers.py  register.py  utils.py
projects/project_20250611_080841/: .project.json
projects/project_20250611_080910/: .project.json
projects/test_project/: .project.json
scripts/: list_gigachat_models.py  setup_dev_env.ps1
tests/: __init__.py  conftest.py  test_nlp_processor.py
(+50 files in other folders)
