[metadata]
description-file = README.md
license_files = LICENSE

[pycodestyle]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv,venv

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv,venv
per-file-ignores =
    # Allow * imports in __init__.py files
    __init__.py: F401
    # Allow unused arguments in tests
    tests/*.py: F841

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[coverage:run]
source = ai_code_assistant
omit =
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    # Don't complain about abstract methods
    @(abc\.)?abstractmethod
    def
